# company-size-linkedin-scraper

./: .gitignore  pyproject.toml
src/: main.py
