[tool.poetry]
name = "company-size-linkedin-scraper"
version = "0.1.0"
description = ""
authors = ["Paul Zhang <paulz@ucla.edu>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "company_size_linkedin_scraper"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
